# norman-rockwell-mcp

./: README.md  pyproject.toml
src/norman_rockwell_mcp/: norman_rockwell_mcp.py
