[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norman-rockwell-mcp"
version = "1.0.0"
description = "Norman Rockwell visual vocabulary MCP server for systematic narrative illustration"
authors = [
    {name = "Dal Marsters"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp"
]

[project.optional-dependencies]
dev = []
