[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "norman-rockwell-mcp"
version = "1.0.0"
description = "Norman Rockwell visual vocabulary MCP server for systematic narrative illustration"
authors = [
    {name = "Dal Marsters"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "numpy",
]

[project.optional-dependencies]
dev = []
